OERC-22: Adding Link to public voting into navigation. Fixing navigation link gaps.

--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/static/pretalx_public_voting/vote.css
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/static/pretalx_public_voting/vote.css
@@ -19,9 +19,6 @@
   max-height: 200px;
   overflow: hidden;
 }
-nav {
-  margin-top: 32px;
-}
 #save-bar {
   position: fixed;
   display: flex;
