--- a/src/pretalx/static/agenda/scss/_agenda.scss
+++ b/src/pretalx/static/agenda/scss/_agenda.scss
@@ -62,6 +62,10 @@ header {
     max-width: 250px;
   }
 
+  .navigation a {
+      float: left;
+  }
+
   .header-right {
     margin-left: auto;
     display: flex;
@@ -307,8 +311,6 @@ article .pretalx-session .pretalx-session-info .abstract {
 
       & > .navigation {
         margin-bottom: 16px;
-        display: flex;
-        justify-content: stretch;
       }
       .header-right {
         flex-wrap: wrap;
